@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model

class System {

}

class Database {
    proprety table
    user table
}

class Unregistered\nuser {
    name
    phoneNumber
    email
}

System "1" - "0..*" Property\ncontroller : request >
System "1" - "0..*" Property\ncontroller : foward\ninformation <
Database "1.." - "0..*" System: recives information \nfrom >
Unregistered\nuser "1" - "0..*" System: interacts with >
Property\ncontroller "1." -- "*" Database : request >
Property\ncontroller "1." -- "*" Database : sends\nnecessary\ninformation <


@enduml